--- a/assets/data.bin.6
+++ b/assets/data.bin.6
@@ -3,7 +3,7 @@
 -------------------------qwewwer--------------------------------------------------------------------------------------------------------------------------af
 -------------------------adsddsf---qr-------й-------------------------------------------------------------------------------------------------------------af
 -------------------------adsddsf---zc---qweweer-----------------------------------------------------------------------------------------------------------af
--------------------------adsddsf-`------asdsdsf-----------------------------------------------------------------------------------------------------------af
+-------------------------adsddsf-0------asdsdsf-----------------------------------------------------------------------------------------------------------af
 -------------------------adsddsf------`-asdsdsf-----------------------------------------------------------------------------------------------------------af
 -------------------------adsdds./er--qem,sdsdsf-----------------------------------------------------------------------------------------------------------af
 -------------------------adsddsssdf-`asdsdsdsdf-----------------------------------------------------------------------------------------------------------af
@@ -13,10 +13,10 @@
 <---------------------------------------------------------------------------------------------------------------------------------------------------------af
 <---------------------------------------------------------------------------------------------------------------------------------------------------------af
 <------------------------------------------------`--`--`--------------------------------------------------------------------------------------------------af
-<---------------``------------------------------`-``-``-`---------------------------`-----------0--1----------------------------------------------ф-------af
-<---------------qr---9----9----9---qr-------------------99-99--9---qr`9`99`9`qr9--`-9-`--9qwewewewewewewewewr---9--9--9--9--9--9--9--9--9qwewewewewewewewm,r
-<---------------z./wwwwwwwwwwwwwwwm,./wwwwwwwwwwwwwwwwwwwwwwwwwwwwm,./wwwwwwm,./wwwwwwwwwm,s/dsdsddsdsdssdss./wwwwwwwwwwwwwwwwwwwwwwwwwwm,./wwwwwwwwwwwwwm,.
-<----------------zxcsdscxcxcxcxcxcxsdxcxcxcxcxcxcxcsdsxcxcxcxcxcxccsdxcxcxcxcsdxxcxcxcxcccsdxxcxcxcxcxcxcccsdxcxcxcxcxcxcxcxcxcxcxcxcxcccsdxxcxcxcxcxcxcccsd
+<---------------``------------------------------`-``-``-`---------------------------`--------------1----------------------------------------------ф-------af
+<---------------qr---9----9----9---qr-------------------99-99--9---qr`9`99`9`qr9--`-9-`-9-qwewewewewewewewewr---9--9--9--9--9--9--9--9---qwewewewewewewewm,f
+<---------------z./wwwwwwwwwwwwwwwm,./wwwwwwwwwwwwwwwwwwwwwwwwwwwwm,./wwwwwwm,./wwwwwwwwwm,swdsdsddsdsdssdss./wwwwwwwwwwwwwwwwwwwwwwwwwwm,sdssdddsdsdsdsdssf
+<----------------zxcsdscxcxcxcxcxcxsdxcxcxcxcxcxcxcsdsxcxcxcxcxcxccsdxcxcxcxcsdxxcxcxcxcccsdxxcxcxcxcxcxcccsdxcxcxcxcxcxcxcxcxcxcxcxcxcccsdxxcxcxcxcxcxcccdd
 <-------------------adf------------af--------------asf-------------af--------af-----------af---------------af----------------------------af---------------af
 <<<<<<<<<<<<<<<<<<<-adf------------af--------------adf-------------af--------af-----------af---------------af----------------------------af---------------af
 --------------------adf------------af--------------asf-------------af--------af-----------af---------------af----------------------------af---------------af
